# libexplain

./: BUILDING  LICENSE  Makefile.in  README  aegis.conf  configure  libexplain.spec
aegis.conf.d/: aede-policy  aemakegen  cook  diff  html  merge  template  test
catalogue/: accept  accept4  access  acct  closedir  connect  dirfd  fchmod  fclose  fcntl  fdopen  ferror  fflush  fgetc  fgets  fileno  fopen  fpathconf  fputc  fread  freopen  ftruncate  fwrite  getc  getchar  getcwd  getgroups  gethostname  kill  lseek  malloc  mkostemp  mkstemp  opendir  pclose  pipe  pread  putchar  read  readdir  (+10 more)
catalogue-ioctl/: bits_ioctl_types  bits_ioctls  linux_blktrace_api  linux_cciss_ioctl  linux_cdrom  linux_cyclades  linux_dm_ioctl  linux_ext2_fs  linux_fs  linux_hdreg  linux_lp  linux_suspend_ioctls  linux_vt  scsi_scsi_ioctl  sys_mtio
codegen/: catalogue.c  catalogue.h  elastic_buffer.h  generate.c  gram.y  header.c  ioctl_scan.c  ioctl_scan.h  main.c  node.c  node.h  string_buffer.c  string_buffer.h  wrapper.c
debian/: .cook.fp  changelog  control  copyright  explain.install  libexplain-dev.install  libexplain9.install  rules  watch
etc/: BUILDING.man  Howto.cook  README.man  apt-get-depends.cook  autoconf.cook  building.man  check-tarball.sh  check_ioctl_data_type.awk  configure.ac  documentation.cook  doxygen.cfg  doxygen.cook  groff.sh  howto.cook  howto_debian_upload.txt  i18n.cook  large.awk  makefile-tail  makefile.cook  manually-confirmed.po  metrics.cook  new.sh  new_system_call.man  page-list.awk  ppa-upload.sh  readme.man  ref-ptx.ignore  ref-ptx.sh  ref-ptx1.awk  ref-ptx2.awk  reference.man  tags.cook  xgettext-postprocess.sh
etc/template/: c  etc_so  generic  h  html  lib_ac_h  lib_buf_c  lib_buf_ec  lib_buf_eh  lib_buf_h  lib_c  lib_generic  lib_h  lib_ioc_c  lib_ioc_h  man  man3  ms  sh  test
explain/: accept.c  accept.h  access.c  access.h  bind.c  bind.h  chdir.c  chdir.h  chmod.c  chmod.h  chown.c  chown.h  close.c  close.h  closedir.c  closedir.h  connect.c  connect.h  creat.c  creat.h  dup.c  dup.h  dup2.c  dup2.h  execve.c  execve.h  execvp.c  execvp.h  fchdir.c  fchdir.h  fchmod.c  fchmod.h  fchown.c  fchown.h  fcntl.c  fcntl.h  fdopen.c  fdopen.h  ferror.c  ferror.h  (+119 more)
explain/syscall/: accept.c  accept4.c  acl_get_fd.c  acl_set_fd.c  adjtime.c  adjtimex.c  calloc.c  chmod.c  closedir.c  creat.c  dirfd.c  eventfd.c  fchmod.c  fchmod.h  fchownat.c  fclose.c  fcntl.c  fcntl.h  fdopendir.c  feof.c  fflush.c  fgetpos.c  fileno.c  flock.c  fpurge.c  fputs.c  freopen.c  fseek.c  fsetpos.c  fstatfs.c  fstatvfs.c  fsync.c  ftell.c  ftime.c  ftruncate.c  futimens.c  futimes.c  getcwd.c  getdomainname.c  getgroups.c  (+76 more)
ioctl-scan/: main.c
ioctl-scan/report/: semi_auto.c
libdir/pkg-config/: libexplain.pc.in
libdir/pkgconfig/: libexplain.pc.in
libexplain/: accept.c  accept.h  accept4.c  accept4.h  accept4_on_error.c  accept4_or_die.c  accept_on_error.c  accept_or_die.c  access.c  access.h  access_on_error.c  access_or_die.c  acct.c  acct.h  acct_on_error.c  acct_or_die.c  acl_from_text.h  acl_get_fd.h  acl_get_file.h  acl_grammar.y  acl_set_fd.h  acl_set_file.h  acl_to_text.h  adjtime.c  adjtime.h  adjtime_on_error.c  adjtime_or_die.c  adjtimex.c  adjtimex.h  adjtimex_on_error.c  adjtimex_or_die.c  asprintf.h  bind.c  bind.h  bind_on_error.c  bind_or_die.c  calloc.c  calloc.h  calloc_or_die.c  capability.c  (+824 more)
libexplain/ac/: assert.h  ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  float.h  ftw.h  getopt.h  grp.h  inttypes.h  libintl.h  libio.h  limits.h  math.h  mntent.c  mntent.h  netdb.h  poll.h  pwd.h  regex.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdio_ext.h  stdlib.c  stdlib.h  string.c  string.h  syslog.h  termio.h  termios.h  time.h  unistd.h  ustat.h  utime.h  vfs.h  wchar.h  (+1 more)
libexplain/buffer/: accept4_flags.c  accept4_flags.h  access_mode.c  access_mode.h  address_family.c  address_family.h  addrinfo.c  addrinfo.h  addrinfo_flags.c  addrinfo_flags.h  argument_is_invalid.c  argument_is_invalid.h  arpreq.c  arpreq.h  because.c  because.h  blk_user_trace_setup.c  (+798 more)
po/: libexplain.pot
script/: test_prelude.in
test_access/: main.c
test_bind/: main.c
test_chdir/: main.c
test_checker/: main.c
test_chmod/: main.c
test_chown/: main.c
test_config/: configured.h  main.c
test_creat/: main.c
test_dup2/: main.c
test_execlp/: main.c
test_execve/: main.c
test_execvp/: main.c
test_fchdir/: main.c
test_fchmod/: main.c
test_fgetpos/: main.c
test_fileinfo/: main.c
test_fopen/: main.c
test_fpathconf/: main.c
test_fputs/: main.c
test_fseek/: main.c
test_fstat/: main.c
test_ftell/: main.c
test_ftruncate/: main.c
test_generator/: generate.c  generate.h  gram.h  gram.y  main.c  node.c  node.h
test_getaddrinfo/: main.c
test_getcwd/: main.c
test_getpgid/: main.c
test_getpgrp/: main.c
test_getresgid/: main.c
test_getrlimit/: main.c
test_include_gotchas/: main.c
test_ioctl_coverage/: main.c
test_kill/: main.c
test_link/: main.c
test_lstat/: main.c
test_mincore/: main.c
test_mkdir/: main.c
test_mknod/: main.c
test_open/: main.c
test_opendir/: main.c
test_pathconf/: main.c
test_printf/: main.c
test_putenv/: main.c
test_readlink/: main.c
test_realpath/: main.c
test_remove/: main.c
test_rename/: main.c
test_rmdir/: main.c
test_setenv/: main.c
test_setpgid/: main.c
test_setpgrp/: main.c
test_setregid/: main.c
test_setresgid/: main.c
test_setsid/: main.c
test_setuid/: main.c
test_shmat/: main.c
test_shmctl/: main.c
test_socket/: main.c
test_stat/: main.c
test_stime/: main.c
test_strtod/: main.c
test_strtof/: main.c
test_strtol/: main.c
test_strtold/: main.c
test_strtoll/: main.c
test_strtoul/: main.c
test_strtoull/: main.c
test_symlink/: main.c
test_system/: main.c
test_truncate/: main.c
test_ungetc/: main.c
test_unlink/: main.c
test_user/: main.c
test_utime/: main.c
test_utimes/: main.c
test_v4l1/: main.c
test_v4l2/: main.c
test_vfprintf/: main.c
web-src/: fixme.awk  index.html  libexplain.png.uue  module.cook
(+3383 files in other folders)
